--- a/changes.txt
+++ b/changes.txt
@@ -24,7 +24,7 @@ Traps
  - Trap density in vaults is reduced by 75%
 
 Identify
- - ID is now "rune-based"; once an object properry is recognised once, it will
+ - ID is now "rune-based"; once an object property is recognised once, it will
    always be recognised on all future items
  - The only forms of magical identify are scrolls and the mage spell, both of
    which identify a single unknown rune
